# ScaffoldBench

./: .gitignore  README.md  pyproject.toml
src/scaffoldbench/: __init__.py  cli.py  metrics.py  runner.py  tasks.py
src/scaffoldbench/examples/: basic_scaffold.py
